<resources>
    <string name="app_name">美食大魔王</string>

    <!-- Strings related to login -->
    <string name="login_input_phone">手机号</string>
    <string name="login_input_password">密码</string>
    <string name="login_action_sign_in">登入</string>
    <string name="login_action_turn_to_register">还没有账号？前往注册~</string>
    <string name="login_action_turn_to_instruction">不知道怎么用？快戳我吧！</string>

    <string name="regist_input_phone">手机号</string>
    <string name="regist_input_password">登录密码</string>
    <string name="regist_input_password_again">重复密码</string>
    <string name="regist_input_username">用户昵称</string>
    <string name="regist_action_regist">完成注册</string>
    <string name="regist_action_turn_to_login">已有账号？直接登录~</string>

    <string name="error_invalid_password">密码长度太短</string>
    <string name="error_incorrect_password">密码和账号不匹配</string>
    <string name="error_field_required">此处不得为空</string>
    <string name="error_password_again_not_match">两次密码不匹配</string>

    <string name="main_my_record">我的预选单</string>
    <string name="main_my_next">今天吃什么</string>

    <string name="main_publish_task">制订计划</string>
    <string name="main_my_publish_task">我发布的任务</string>
    <string name="main_my_accept_task">我接受的任务</string>
    <string name="main_nearby_task">附近的任务</string>
    <string name="main_user_info_setting">我的资料</string>
    <string name="main_password_reset">重置密码</string>
    <string name="main_logout">登出</string>
    <string name="nav_title">用户名</string>
    <string name="nav_descripition">用户的自己的签名的描述</string>

    <string name="reset_password_old_password">原密码</string>
    <string name="reset_password_new_password">新密码</string>
    <string name="reset_password_new_password_again">重复新密码</string>
    <string name="reset_password_confirm_button">确认修改</string>

    <string name="fisrt_step_ok">已经选好啦 进入下一步</string>
    <string name="second_step_title">请填写任务标题</string>
    <string name="second_step_content">请填写任务详细内容</string>
    <string name="second_step_ok">已经填完啦 进入下一步</string>
    <string name="third_step_ok">完成任务创建</string>

    <string name="title_activity_main">美食大魔王</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="second_step_deadline">请选择任务截止时间</string>
    <string name="second_step_credit">请填写奖励的信誉值</string>
    <string name="error_credit">你的信誉值不足</string>
    <string name="add_tag">自定义标签</string>
    <string name="add_tag_button">增加标签</string>
    <string name="locationDscp">请填写详细地址</string>
    <string name="search_hint">输入地点</string>

</resources>
