<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main_publish_task"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/main_publish_task" />
        <item
            android:id="@+id/main_my_publish_task"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/main_my_publish_task" />
        <item
            android:id="@+id/main_my_accept_task"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/main_my_accept_task" />
        <item
            android:id="@+id/main_nearby_task"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/main_nearby_task" />
    </group>

    <item android:title="我的信息">
        <menu>
            <item
                android:id="@+id/main_user_info_setting"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/main_user_info_setting" />
            <item
                android:id="@+id/main_password_reset"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/main_password_reset" />
        </menu>
    </item>

</menu>
