<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="projectmanager.dada.pages.ResetPasswordActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/reset_password_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/reset_password_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/reset_password_old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reset_password_old_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/reset_password_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reset_password_new_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/reset_password_new_password_again"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reset_password_new_password_again"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />


            <Button
                android:id="@+id/reset_password_confirm_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/reset_password_confirm_button"
                android:textStyle="bold"
                android:background="@color/dada_blue"
                android:textColor="@color/white"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
