<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_publish_task_steo_two"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="projectmanager.dada.pages.PublishTaskStepTwoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/step_two_title"
                android:text="@string/second_step_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="19dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:id="@+id/step_two_input_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:ems="10"
                android:layout_marginTop="14dp"
                android:layout_below="@+id/step_two_title"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/step_two_content"
                android:text="@string/second_step_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/step_two_input_title"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:layout_marginTop="14dp"
                android:id="@+id/step_two_input_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_below="@+id/step_two_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/step_two_location"
                android:text="@string/locationDscp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/step_two_input_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:layout_marginTop="14dp"
                android:id="@+id/step_two_input_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_below="@+id/step_two_location"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/step_two_credit"
                android:text="@string/second_step_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/step_two_input_location"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <EditText
                android:layout_marginTop="14dp"
                android:id="@+id/step_two_input_credit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:layout_below="@+id/step_two_credit"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true" />

            <Button
                android:id="@+id/step_two_deadline"
                android:text="@string/second_step_deadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/step_two_input_credit"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:background="@color/dada_yellow"
                android:textColor="@color/white"/>


            <Button
                android:id="@+id/step_two_ok_button"
                android:text="@string/second_step_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_below="@+id/step_two_deadline"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:background="@color/dada_blue"
                android:textColor="@color/white"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
