<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_publish_task_step_three"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="projectmanager.dada.pages.PublishTaskStepThreeActivity">
    <LinearLayout
        android:id="@+id/tags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <projectmanager.dada.model.TagListView
            xmlns:f="http://schemas.android.com/apk/res-auto"
            android:id="@+id/tagView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/common_margin"
            android:paddingLeft="@dimen/common_margin"
            android:paddingRight="@dimen/common_margin"
            android:paddingTop="16.0dip"
            f:horizontalSpacing="@dimen/tag_horizontal_spacing"
            f:orientation="horizontal"
            f:verticalSpacing="@dimen/tag_vertical_spacing" />
    </LinearLayout>

    <TextView
        android:id="@+id/add_tag"
        android:text="@string/add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tags"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_marginTop="14dp"
        android:id="@+id/input_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:layout_below="@+id/add_tag"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />
    <Button
        android:id="@+id/add_tag_button"
        android:text="@string/add_tag_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_tag"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/dada_yellow"
        android:textColor="@color/white"/>
    
    <Button
        android:id="@+id/step_three_ok_button"
        android:text="@string/third_step_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/dada_blue"
        android:textColor="@color/white"/>
</RelativeLayout>
